添加与删除收藏和授权登录

--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,5 +1,5 @@
 <view class='root'>
-  <view wx:if='{{imgUrls[0]&&fontEnd[0]&&backEnd[0]}}'>
+  <view wx:if='{{imgUrls[0]||fontEnd[0]||backEnd[0]}}'>
     <swiper
       autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}" class='swiper-section' indicator-dots indicator-active-color='#fff' circular='{{true}}'>
       <block wx:for="{{imgUrls}}" wx:key="index">
@@ -11,7 +11,7 @@
       </block>
     </swiper>
     <view>
-      <view class="content">前端开发</view>
+      <view class="content">{{booktype[0]}}</view>
       <navigator url="../detail/detail?bookId={{item._id}}" wx:for="{{fontEnd}}" class='book-wrap' wx:key="index">
         <image src="{{item.img}}" class='book'/>
         <view class="txt">
@@ -29,7 +29,43 @@
       </navigator>
     </view>
     <view>
-      <view class="content">后端开发</view>
+      <view class="content">{{booktype[1]}}</view>
+      <navigator url="../detail/detail?bookId={{item._id}}" wx:for="{{os}}" class='book-wrap' wx:key="index">
+        <image src="{{item.img}}" class='book'/>
+        <view class="txt">
+          <view class='book-title'>{{item.title}}</view>
+          <view class='book-desc'>{{item.desc}}</view>
+          <view class='book-bot'>
+            <text>{{item.author}}</text>
+            <view>
+              <text>{{item.startsnums}}天前</text>
+              <!-- <text>{{item.type.title}}</text> -->
+              <text>{{item.looknums}}人在看</text>
+            </view>
+          </view>
+        </view>
+      </navigator>
+    </view>
+     <view>
+      <view class="content">{{booktype[2]}}</view>
+      <navigator url="../detail/detail?bookId={{item._id}}" wx:for="{{mobile}}" class='book-wrap' wx:key="index">
+        <image src="{{item.img}}" class='book'/>
+        <view class="txt">
+          <view class='book-title'>{{item.title}}</view>
+          <view class='book-desc'>{{item.desc}}</view>
+          <view class='book-bot'>
+            <text>{{item.author}}</text>
+            <view>
+              <text>{{item.startsnums}}天前</text>
+              <!-- <text>{{item.type.title}}</text> -->
+              <text>{{item.looknums}}人在看</text>
+            </view>
+          </view>
+        </view>
+      </navigator>
+    </view>
+     <view>
+      <view class="content">{{booktype[3]}}</view>
       <navigator url="../detail/detail?bookId={{item._id}}" wx:for="{{backEnd}}" class='book-wrap' wx:key="index">
         <image src="{{item.img}}" class='book'/>
         <view class="txt">
