--- a/pages/mine/mine.wxss
+++ b/pages/mine/mine.wxss
@@ -7,9 +7,26 @@
   height: 80px
 }
 .itemBook{
+  position: relative;
   margin: 20px;
   width: 100px;
   text-align: center;
   margin-bottom: 20px;
   font-size: 10px
+}
+.drop{
+  position:absolute;
+right:0;
+top:0;
+font-size:14px;
+font-weight:bold;
+border:1px solid red;
+border-radius:50%;
+display:inline-block;
+width:11px;
+height:12px;
+text-align:center;
+line-height:10px;
+background:#fff;
+
 }
