--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,5 +1,5 @@
 <view class='root'>
-  <view wx:if='{{imgUrls[0]||fontEnd[0]||backEnd[0]}}'>
+  <view wx:if='{{imgUrls[0]}}'>
     <swiper
       autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}" class='swiper-section' indicator-dots indicator-active-color='#fff' circular='{{true}}'>
       <block wx:for="{{imgUrls}}" wx:key="index">
@@ -10,9 +10,9 @@
         </navigator>
       </block>
     </swiper>
-    <view>
-      <view class="content">{{booktype[0]}}</view>
-      <navigator url="../detail/detail?bookId={{item._id}}" wx:for="{{fontEnd}}" class='book-wrap' wx:key="index">
+    <view wx:for='{{bookcontent}}' wx:for-index='bookcontentIndex' wx:key='bookcontentIndex'>
+      <view class="content">{{booktype[bookcontentIndex]}}</view>
+      <navigator url="../detail/detail?bookId={{item._id}}" wx:for="{{bookcontent[bookcontentIndex]}}" class='book-wrap' wx:for-index='booktypetIndex' wx:key="booktypetIndex">
         <image src="{{item.img}}" class='book'/>
         <view class="txt">
           <view class='book-title'>{{item.title}}</view>
@@ -20,7 +20,7 @@
           <view class='book-bot'>
             <text class='author'>{{item.author}}</text>
             <view>
-              <text>{{item.startsnums}}天前</text>
+              <text>{{updatetime[bookcontentIndex][booktypetIndex]}}</text>
               <!-- <text>{{item.type.title}}</text> -->
               <text>{{item.looknums}}人在看</text>
             </view>
@@ -28,60 +28,7 @@
         </view>
       </navigator>
     </view>
-    <view>
-      <view class="content">{{booktype[1]}}</view>
-      <navigator url="../detail/detail?bookId={{item._id}}" wx:for="{{os}}" class='book-wrap' wx:key="index">
-        <image src="{{item.img}}" class='book'/>
-        <view class="txt">
-          <view class='book-title'>{{item.title}}</view>
-          <view class='book-desc'>{{item.desc}}</view>
-          <view class='book-bot'>
-            <text>{{item.author}}</text>
-            <view>
-              <text>{{item.startsnums}}天前</text>
-              <!-- <text>{{item.type.title}}</text> -->
-              <text>{{item.looknums}}人在看</text>
-            </view>
-          </view>
-        </view>
-      </navigator>
-    </view>
-     <view>
-      <view class="content">{{booktype[2]}}</view>
-      <navigator url="../detail/detail?bookId={{item._id}}" wx:for="{{mobile}}" class='book-wrap' wx:key="index">
-        <image src="{{item.img}}" class='book'/>
-        <view class="txt">
-          <view class='book-title'>{{item.title}}</view>
-          <view class='book-desc'>{{item.desc}}</view>
-          <view class='book-bot'>
-            <text>{{item.author}}</text>
-            <view>
-              <text>{{item.startsnums}}天前</text>
-              <!-- <text>{{item.type.title}}</text> -->
-              <text>{{item.looknums}}人在看</text>
-            </view>
-          </view>
-        </view>
-      </navigator>
-    </view>
-     <view>
-      <view class="content">{{booktype[3]}}</view>
-      <navigator url="../detail/detail?bookId={{item._id}}" wx:for="{{backEnd}}" class='book-wrap' wx:key="index">
-        <image src="{{item.img}}" class='book'/>
-        <view class="txt">
-          <view class='book-title'>{{item.title}}</view>
-          <view class='book-desc'>{{item.desc}}</view>
-          <view class='book-bot'>
-            <text>{{item.author}}</text>
-            <view>
-              <text>{{item.startsnums}}天前</text>
-              <!-- <text>{{item.type.title}}</text> -->
-              <text>{{item.looknums}}人在看</text>
-            </view>
-          </view>
-        </view>
-      </navigator>
-    </view>
+    
   </view>
   <view wx:else class='loading-icon'>
     <image src='/assets/loading.svg'></image>
