优化显示，解决删除收藏时全部删除的问题

--- a/pages/mine/mine.wxml
+++ b/pages/mine/mine.wxml
@@ -1,7 +1,7 @@
 <!--pages/mine/mine.wxml-->
-<view class='root wrap'>
+<view class='root'>
   <view wx:if="{{show}}" >
-    <view catchlongpress='delete'>
+    <view catchlongpress='delete' class='img-wrap'>
       <navigator url="../detail/detail?bookId={{collectionlist[index]._id}}" wx:for="{{collectionlist}}" class='itemBook' wx:key="{{index}}">
           <image src="{{item.img}}"></image>
           <view>{{item.author}}</view>
